# clean-data-platform-airflow

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.api  GEMINI.md  Makefile  README.md  check_db.py  coverage.xml  dev.db  docker-compose.yml  pyproject.toml  setup.cfg  walkthrough.md
.agents/: AGENTS.md
.claude/: claude-instructions.md
.claude/commands/: sdd-ask.md  sdd-compress-context.md  sdd-converge.md  sdd-correct.md  sdd-diagnose.md  sdd-harness.md  sdd-organize.md  sdd-pipeline.md  sdd-review-architecture.md  sdd-stabilize.md  sdd-validate-governance.md
.codex/: commands.md
.codex/skills/: sdd-ask.prompt.md  sdd-compress-context.prompt.md  sdd-converge.prompt.md  sdd-correct.prompt.md  sdd-diagnose.prompt.md  sdd-harness.prompt.md  sdd-organize.prompt.md  sdd-pipeline.prompt.md  sdd-review-architecture.prompt.md  sdd-stabilize.prompt.md  sdd-validate-governance.prompt.md
.cursor/rules/: sdd-commands.mdc  sdd-governance.mdc
.gemini/: commands.md  gemini-instructions.md  settings.json
.gemini/antigravity/: antigravity-instructions.md
.github/prompts/: sdd-ask.prompt.md  sdd-compress-context.prompt.md  sdd-converge.prompt.md  sdd-correct.prompt.md  sdd-diagnose.prompt.md  sdd-harness.prompt.md  sdd-organize.prompt.md  sdd-pipeline.prompt.md  sdd-review-architecture.prompt.md  sdd-stabilize.prompt.md  sdd-validate-governance.prompt.md
.github/workflows/: ci.yml  ci_cd_pipeline.yml
app/: check_db.py  config.py  main.py
app/application/: __init__.py  unit_of_work.py
app/auth/: current_user.py  dependencies.py  jwt_validator.py  permission_resolver.py  role.py
app/infrastructure/: compute_job_factory.py  drift_classifier.py  logging_config.py  monitoring_adapter.py  platform_client.py  quality_gate_evaluator.py
cli/: main.py
cli/commands/: discovery_commands.py  pipeline_commands.py
docs/: architecture_c4.md  asset_lifecycle.md  business_assets.md  business_rules.md  ci_cd_guide.md  class_diagram.md  clean-code.md  glossary.md  operations_guide.md  stakeholders.md  todo_list.md  vision.md
docs/adr/: ADR-001-clean-architecture-ports-adapters.md  ADR-001-compute-engine-duckdb-vs-spark.md  ADR-002-metadata-database-engine.md  ADR-002-secret-management-openbao.md  ADR-003-api-versioning-strategy.md  ADR-003-dag-generation-shared-volume.md  ADR-004-compute-engine-duckdb-vs-spark.md  ADR-004-observability-readiness-strategy.md  ADR-005-secret-management-openbao.md  ADR-005-security-identity-jwt-rbac.md  ADR-006-api-versioning-strategy.md  README.md  (+7 more)
migrations/: env.py
platform/: __init__.py  config.py  main.py
scripts/: check_db.py  init-user-db.sh  init_db.py
tests/: conftest.py
(+364 files in other folders)
