[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airflow-data-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "pyjwt[crypto]>=2.8",
    "croniter>=3.0",
    "jinja2>=3.1.6",
    "httpx>=0.27",
    "duckdb>=1.0.0",
    "typer>=0.12",
    "structlog>=24",
    "tenacity>=8.2",
    "prometheus-client>=0.20",
    "slowapi>=0.1.9",
    "motor>=3.6.0",
]

[project.scripts]
cli = "cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aiosqlite>=0.20",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "hypothesis>=6.100",
    "respx>=0.21",
    "mutmut>=2.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "e2e: end-to-end tests requiring external services (Airflow, Vault, Postgres)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401", "E501", "B008", "B904", "E402"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "B008", "SIM", "E402"]
"migrations/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_generics = false
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app", "cli", "services"]
